# osm-tools

./: .gitignore  LICENSE  Makefile  osm-tool.spec  pyproject.toml
.cache/: geofabrik_regions.json
.github/workflows/: release.yml
docs/: TASK_BOARD.md
docs/superpowers/plans/: 2026-05-07-phase1-foundation-download.md  2026-05-07-phase2-conversion.md  2026-05-07-phase3-processing.md  2026-05-07-phase4-splitting.md  2026-05-07-phase5-vector-tiles.md  2026-05-14-download-ux-improvement.md  2026-05-29-github-release-automation.md  2026-05-29-map-first-ui-polish.md
docs/superpowers/specs/: 2026-05-07-osm-tool-design.md  2026-05-13-react-migration-design.md  2026-05-14-download-redesign.md  2026-05-14-download-ux-improvement-design.md  2026-05-29-github-release-automation-design.md  2026-05-29-map-first-ui-polish-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/components/: DrawMap.tsx  FileSelector.tsx  MapSelector.tsx  RegionTree.tsx  TaskTable.tsx
frontend/src/hooks/: useSSE.ts  useTasks.ts
frontend/src/pages/: ConvertPage.tsx  (+5 more)
outdata/: rect_2026-05-15T00-42-17.json  shuchu
scripts/: download_admin_data.py
src/osm_tool/: __init__.py  app.py  main.py  tray.py
tests/: conftest.py  test_aria2_downloader.py  test_bbox.py  test_converter.py  test_download_flow.py  test_environment.py  test_extractor.py  test_geofabrik.py  test_models.py  test_overpass.py  test_processor.py  test_publisher.py  test_splitter.py
tools/upx/: NEWS  THANKS.txt  upx.1
(+68 files in other folders)
