[project]
name = "osm-tool"
version = "0.1.0"
description = "OSM 数据下载、处理、转换、发布桌面工具"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "requests>=2.31",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
osm-tool = "osm_tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
