[project]
name = "osm-tool"
version = "0.1.0"
description = "OSM 数据下载、处理、转换、发布桌面工具"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sse-starlette>=2.0",
    "requests>=2.31",
    "psutil>=5.9",
    "shapely>=2.1.2",
    "pyproj>=3.7.1",
    "python-multipart>=0.0.28",
    "pystray>=0.19",
    "Pillow>=10.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
osm-tool = "osm_tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_tool"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
